# CVRP

./: .gitignore  .pdm.toml  README.org  ga.py  plot.py  pyproject.toml  q1.py  q2.py  q3.py  q4.py  q5.py  run.py  run.sh  run_one.sh  test.py  utils.py
