[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "fangyuan", email = "fywang96@gmail.com"},
]
dependencies = [
    "numpy>=1.24.2",
    "deap>=1.3.3",
    "black>=23.1.0",
    "matplotlib>=3.7.1",
    "pandas>=1.5.3",
    "seaborn>=0.12.2",
]
requires-python = ">=3.10"
license = {text = "MIT"}
